import java.util.ArrayList;
package src.main.java.Controller;

public class TurnController {
    private int countStepPlayers;
    private int countStepEnemies;

    public void nextTurn() {}
}

