package src.main.java.Characters.Enemies;

import src.main.java.Characters.Characters;

public class Enemies extends Characters {
    public String typeEnemy;
}
