package src.main.java.Characters.Players;

public class DraLara extends Players {
    public void skillQuickAnalysis() {
    }
}
