package src.main.java.Characters.Players;

public class ElenaDrakeCapitan extends Players {
    public void skillTacticOrder() {
    }
}
