package src.main.java.Characters.Players;

import src.main.java.Characters.Characters;
import src.main.java.Utils.Animation;

public class Players extends Characters {
    public String rol;
    public String skill;
    public Animation skillAnimation;

    public void animationSkill(Animation skillAnimation){}
}
