package Domain.Entity.Characters.Enemies;

public class Drone extends Enemies {
    public void droneWatch() {
    }
}
