package src.main.java.Elements.Items;

// Clase MedicalKit que hereda de Items
class MedicalKit extends Items { 
  private int increaseInLife;

public MedicalKit(int statsElement, int increaseInLife) {
    super(statsElement);
    this.increaseInLife = increaseInLife;
}

public void enhancementEffect(DraLara) {
    System.out.println("Usando botiquín...");
        objetivo.increaseLife(increaseInLife);
}

public void enhancementEffect(ElenaDrakeCapitan) {
    System.out.println("Usando botiquín...");
        objetivo.increaseLife(increaseInLife);

}

public void enhancementEffect(EngineerMarcus) {
    System.out.println("Usando botiquín...");
        objetivo.increaseLife(increaseInLife);
  
}

public void enhancementEffect(JaxKane) {
    System.out.println("Usando botiquín...");
        objetivo.increaseLife(increaseInLife);

}

public void enhancementEffect(ZaraQuinn) {
    System.out.println("Usando botiquín...");
        objetivo.increaseLife(increaseInLife);

}
  
}
