package src.main.java.Elements.Powers;

// Clase EnergyShield que hereda de clase Powers
class EnergyShield extends Powers { 
  
  public EnergyShield(int range) { 
    super(range); 
  }

public void protectPlayers(DraLara) {
    System.out.println("Escudo de energía protegiendo jugador en un radio de " + range + " metros.");
}

public void protectPlayers(ElenaDrakeCapitan) {
    System.out.println("Escudo de energía protegiendo jugador en un radio de " + range + " metros.");
  
}

public void protectPlayers(EngineerMarcus) {
    System.out.println("Escudo de energía protegiendo jugador en un radio de " + range + " metros.");
}

public void protectPlayers(JaxKane) {
    System.out.println("Escudo de energía protegiendo jugador en un radio de " + range + " metros.");
}

public void protectPlayers(ZaraQuinn) {
    System.out.println("Escudo de energía protegiendo jugador en un radio de " + range + " metros.");
}
