package src.main.java.Elements.Weapons;

// Clase PlasmaRifle
class PlasmaRifle extends Weapons { 
  public PlasmaRifle(int range) { 
    super(range); 
  }

public void PlasmaTorrent() {
    System.out.println("Rifle de plasma disparando torrente de plasma a " + range + " metros.");
}

}
